@@ -8,3 +8,4 @@
 - aagmaalpro: fix images, categories
 - javgg: fix playback
 - javhdporn: fix pagination
+- erogarga: fix koreanpornmovie playback
